# Current-Projects

C++/COPClassProj/: CMakeLists.txt  customer.cpp  customer.h  ejournal.csv  groceryInventory.cpp  groceryInventory.h  main.cpp  menu_items.csv  register.cpp  register.h  tester.cpp  tester.h
C++/Car/: CMakeLists.txt  SchedulerFunctions.cpp  SchedulerFunctions.h  User_Iterations.cpp  User_Iterations.h  main.cpp
C++/ColorfulConsole/: CMakeLists.txt  main.cpp
C++/Cpp-Drinks-Examples/: CMakeLists.txt  drinks.cpp  drinks.h  main.cpp  ui.cpp  ui.h
C++/CreateDifferentMenus/: CMakeLists.txt  main.cpp
C++/Game/: CMakeLists.txt  main.cpp  menu.csv
C++/Library Class (OOP 1st assignment)/: CMakeLists.txt  main.cpp
C++/Qt_Test004/: CMakeLists.txt
C++/Qt_Test05/: CMakeLists.txt  main.cpp
C++/Qt_Test_Projects/Qt_Test004/: CMakeLists.txt
C++/Snake/: CMakeLists.txt  main.cpp
C++/TextBasedGame001/: CMakeLists.txt  beginnerEnemy.cpp  beginnerEnemy.h  combatUI.cpp  combatUI.h  gameEvents.cpp  gameEvents.h  gameTextHelper.cpp  gameTextHelper.h  itemHandler.h  masterItemSheet.txt  player.cpp  player.h
C++/randomNumber/: CMakeLists.txt  library.cpp  library.h  main.cpp
C++/test/: CMakeLists.txt  main.cpp  map.txt  map_handler.cpp  map_handler.h
C++/untitled/: CMakeLists.txt
Dapps/: SimpleSmartContract.txt
Godot-Games/: project.godot
Python/Algo-Trading/: main.py
Python/BitcoinMining/: main.py
Python/BitcoinMining-Test/: main.py
Python/ChatterBot/: basicChatterBot01.py
Python/Dividend/: main.py
Python/SMA-binance/: main.py
React/Image-generator/: index.html  scripts.js  styles.css
React/Ripple-app/: design.css  main.js  package-lock.json
Unity/TEST/: GUID.txt  (+1 more)
(+45 files in other folders)
